assets/styles/container-view.scss
.container-state {
  display: flex;
  align-items: center;
  gap: 5px;
  text-transform: capitalize;
}

#container-head {

  #domain-wrapper {
    width: fit-content;
    display: flex;
    align-items: center;
    gap: 10px;
    vertical-align: middle;

    #edit-domain {
      display: flex;
      align-items: center;
      padding: 10px;
      border-radius: 50%;
      transition: background-color 200ms;
      vertical-align: middle;

      &:hover {
        background-color: var(--component-background-hover);
      }

      img {
        width: 20px;
      }
    }

    &:hover {
      .expanded-domain {
        color: inherit;
      }
    }
  }
  h1 {
    width: fit-content;
  }

  h2 {
    font-size: 1.3rem;
  }

  .expanded-domain {
    color: lightgray;
    transition: color 200ms;
  }


  nav {
    width: fit-content;
    margin: 20px auto;
    border: 1px solid var(--border-interactive);
    border-radius: 20px;
    overflow: hidden;

    ul {
      display: flex;

      li {

        &:not(:last-child) {
          border-right: 1px solid var(--border-interactive);
        }

        &[aria-current="1"] {
          font-weight: bold;
          background-color: var(--component-background);
        }

        a {
          display: block;
          padding: 10px 20px;
          text-align: center;
        }
      }
    }
  }
}

#container-activities {
  padding: 0 0 20px;
  .title {
    margin-bottom: 0;
    padding: 20px;
  }

  .record {
    border-top: 1px solid gray;
    width: 100%;
    padding: 10px 20px;
    display: flex;

    &:last-child {
      border-bottom: 1px solid gray;
    }

    .record-datetime {
      margin-right: 10px;
    }
  }
}

#overview-wrapper {

  .row {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 30px;
    margin-top: 30px;
  }
}

.content {
  width: max(1000px, 90%);
  margin: auto;
}

.chart-wrapper {
  width: 100%;
  margin: 20px auto;

}

.charts {
  .head {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  #charts-period {
    padding: 10px;
    border-radius: 8px;
    outline: none;
    background-color: var(--gray-6);
  }
}

.chart {
  margin: auto;
  max-height: 250px;
  max-width: 80%;
}

#shell-wrapper {
  width: fit-content;
  margin: auto;

  #shell-head {
    width: fit-content;
    margin-left: auto;
    display: flex;
    align-items: center;
    gap: 10px;
    margin-bottom: 8px;

    #shell-size {
      display: flex;
      border-bottom: 2px solid lightgray;
      transition: border-bottom-color 200ms;

      input {
        width: 50px;
        background-color: transparent;
        outline: none;
        text-align: center;
      }

      /* Chrome, Safari, Edge, Opera */
      input::-webkit-outer-spin-button,
      input::-webkit-inner-spin-button {
        -webkit-appearance: none;
        margin: 0;
      }

      /* Firefox */
      input[type=number] {
        -moz-appearance: textfield;
      }

      &:focus-within {
        border-bottom: 2px solid black;
      }
    }
  }
}

#actions-wrapper {
  h1 {
    font-size: 1.5rem;
  }

  .row {
    margin-top: 30px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 30px;

    #container-activities {
      grid-row: 1/-1;
    }
  }

  .flex-actions {
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
  }
}

